--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Nepal</h2>
-    <img src="C:\Users\sakri\Desktop\vsc pictures\nepalflag.jpg" width="120" height="130" alt="nepal flag">
+    <img src="nepalflag.jpg" width="120" height="130" alt="nepal flag">
     <ul>
         <li>Capital: Kathmandu</li>
         <li>Language: Nepali</li>
